tests/negative/gold/typed_local3_test.gold
tests/negative/typed_local3_test.toit:7:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/typed_local3_test.toit:5:21: error: Type mismatch. Expected 'int'. Got 'string'
  while local /int? := stop:
                    ^~
Compilation failed.
